--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,29 +7,98 @@
     <View
         android:id="@+id/home_top_v"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="@color/main_color"
+        android:layout_height="96dp"
+        android:background="@drawable/home_background_top"
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_search_result"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scrollbars="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/home_bottom_v"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <TextView
+        android:id="@+id/home_today_food_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/home_today_tv"
+        android:textSize="18sp"
+        android:layout_marginTop="37dp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/notosans_regular"
         app:layout_constraintTop_toBottomOf="@id/home_top_v"
-        android:layout_marginTop="-25dp"
-        android:layout_marginBottom="20dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <View
-        android:id="@+id/home_bottom_v"
+        android:id="@+id/today_afternoon_food"
         android:layout_width="match_parent"
-        android:layout_height="96dp"
-        android:background="@drawable/home_background_bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@id/home_today_food_tv"
+        android:layout_marginHorizontal="22dp" />
+
+    <TextView
+        android:id="@+id/today_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2022년 10월 4일 화요일"
+        android:textSize="14sp"
+        android:fontFamily="@font/notosans_regular"
+        app:layout_constraintLeft_toLeftOf="@id/today_afternoon_food"
+        app:layout_constraintTop_toTopOf="@id/today_afternoon_food"/>
+
+    <TextView
+        android:id="@+id/today_food_1"
+        android:text="순두부 찌개 "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textColor="@color/main_color"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/today_day"
+        app:layout_constraintLeft_toLeftOf="@id/today_afternoon_food"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="20dp"
         />
+
+    <TextView
+        android:id="@+id/today_food_2"
+        android:text="쌀밥 "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/today_day"
+        app:layout_constraintLeft_toRightOf="@id/today_food_1"
+        android:layout_marginTop="18dp"/>
+
+    <TextView
+        android:id="@+id/today_food_3"
+        android:text="생선까스&amp;타르소스"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/today_day"
+        app:layout_constraintLeft_toRightOf="@id/today_food_2"
+        android:layout_marginTop="18dp"/>
+
+
+    <View
+        android:id="@+id/today_evening_food"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginHorizontal="22dp"
+        app:layout_constraintTop_toBottomOf="@id/today_afternoon_food"
+        app:layout_constraintBottom_toTopOf="@id/bt"/>
+
+
+
+    <Button
+        android:id="@+id/bt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginHorizontal="69dp"
+        android:layout_marginBottom="70dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
