--- a/app/src/main/res/layout/item_home_food.xml
+++ b/app/src/main/res/layout/item_home_food.xml
@@ -1,41 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="44dp">
+    android:background="@drawable/home_food_stroke"
+    android:layout_marginHorizontal="25dp">
 
-    <View
-        android:id="@+id/home_food_v"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="@drawable/food_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/home_day"
-        android:text="10/5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/home_text_color"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
-        />
 
-    <TextView
-        android:id="@+id/home_week_day"
-        android:text="화요일"
-        android:textSize="20sp"
-        android:textColor="@color/home_text_color"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/home_day"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+            <TextView
+                android:id="@+id/week_food_day_of_week_tv"
+                android:text="2022년 10월 4일 화요일"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="22dp"
+                android:layout_marginLeft="30dp"
+                />
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/week_food_day_afternoon_cl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/week_food_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="18dp"
+            app:layout_constraintTop_toBottomOf="@id/week_food_day_of_week_tv"
+            android:layout_marginTop="25dp"
+            >
+
+            <TextView
+                android:id="@+id/week_food_afternoon_tv"
+                android:text="중식"
+                android:textColor="@color/white"
+                android:paddingVertical="4dp"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:paddingHorizontal="11dp"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/week_afternoon_food_cl_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon_cl"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="18dp"
+            >
+
+            <TextView
+                android:id="@+id/week_food_1"
+                android:text="순두부 찌개 "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:textColor="@color/main_color"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/week_food_2"
+                android:text="쌀밥 "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/week_food_1"
+                />
+
+            <TextView
+                android:id="@+id/week_food_3"
+                android:text="생선까스&amp;타르소스"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/main_color"
+                android:fontFamily="@font/notosans_regular"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/week_food_2" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/week_afternoon_food_cl_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/week_afternoon_food_cl_1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="-20dp"
+            >
+
+            <TextView
+                android:id="@+id/week_food_4"
+                android:text="마늘쫑비엔나볶음 "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:textColor="@color/main_color"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/week_food_5"
+                android:text="꼬들단무지무침 "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/week_food_4"
+                />
+
+            <TextView
+                android:id="@+id/today_food_6"
+                android:text="배추김치"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/week_food_5" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/dash_line"
@@ -43,28 +147,136 @@
         android:layerType="software"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
-        app:layout_constraintTop_toBottomOf="@id/home_food_v"
+        app:layout_constraintTop_toBottomOf="@+id/week_afternoon_food_cl_2"
+        android:layout_marginTop="40dp"
         />
 
-    <View
-        android:id="@+id/home_food_bottom_v"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/food_background"
-        app:layout_constraintTop_toBottomOf="@id/dash_line"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/today_food"
-        android:text="오늘의 식단"
-        android:textColor="@color/black"
-        android:textSize="14sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/week_food_day_evening_cl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/dash_line"
-        android:layout_marginTop="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:background="@drawable/week_food_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/dash_line"
+        android:layout_marginTop="40dp"
+        >
+
+        <TextView
+            android:id="@+id/week_food_evening_tv"
+            android:text="석식"
+            android:textColor="@color/white"
+            android:paddingVertical="4dp"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:paddingHorizontal="11dp"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/week_evening_food_cl_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/week_food_day_evening_cl"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="7dp"
+        >
+
+        <TextView
+            android:id="@+id/week_evening_food_1"
+            android:text="순두부 찌개 "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_regular"
+            android:textColor="@color/main_color"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/week_evening_food_2"
+            android:text="쌀밥 "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_regular"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/week_evening_food_1"
+            />
+
+        <TextView
+            android:id="@+id/week_evening_food_3"
+            android:text="생선까스&amp;타르소스"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/main_color"
+            android:fontFamily="@font/notosans_regular"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/week_evening_food_2" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/week_evening_food_cl_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/week_evening_food_cl_1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="-20dp"
+        >
+
+        <TextView
+            android:id="@+id/week_evening_food_4"
+            android:text="마늘쫑비엔나볶음 "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_regular"
+            android:textColor="@color/main_color"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/week_evening_food_5"
+            android:text="꼬들단무지무침 "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_regular"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/week_evening_food_4"
+            />
+
+        <TextView
+            android:id="@+id/today_evening_food_6"
+            android:text="배추김치"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_regular"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/week_evening_food_5" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
