--- a/app/src/main/res/layout/fragment_week_food.xml
+++ b/app/src/main/res/layout/fragment_week_food.xml
@@ -7,9 +7,20 @@
     <View
         android:id="@+id/week_food_top_v"
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="110dp"
         android:background="@drawable/home_background_top"
         app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/home_logo"
+        android:layout_width="103dp"
+        android:layout_height="78dp"
+        android:src="@drawable/ic_white_logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/week_food_top_v"
+        android:layout_marginVertical="10dp"
         />
 
     <TextView
@@ -30,19 +41,19 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/week_food_bottom_v"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/week_food_top_tv"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="30dp"
         />
 
-    <View
-        android:id="@+id/week_food_bottom_v"
-        android:layout_width="match_parent"
-        android:layout_height="96dp"
-        android:background="@drawable/home_background_bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+<!--    <View-->
+<!--        android:id="@+id/week_food_bottom_v"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="96dp"-->
+<!--        android:background="@drawable/home_background_bottom"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
