--- a/app/src/main/res/layout/item_home_food.xml
+++ b/app/src/main/res/layout/item_home_food.xml
@@ -259,7 +259,7 @@
             />
 
         <TextView
-            android:id="@+id/today_evening_food_6"
+            android:id="@+id/week_evening_food_6"
             android:text="배추김치"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
