--- a/app/src/main/res/layout/fragment_week_food.xml
+++ b/app/src/main/res/layout/fragment_week_food.xml
@@ -46,6 +46,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/week_food_top_tv"
         android:layout_marginTop="13dp"
+        android:layout_marginBottom="120dp"
         />
 
 <!--    <View-->
