--- a/app/src/main/res/layout/item_home_food.xml
+++ b/app/src/main/res/layout/item_home_food.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/home_food_stroke"
     android:layout_marginHorizontal="25dp">
@@ -49,95 +49,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/week_afternoon_food_cl_1"
+    <TextView
+        android:id="@+id/week_food"
+        android:text="순두부 찌개 "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:paddingHorizontal="10dp"
+        android:fontFamily="@font/notosans_regular"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon_cl"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="6dp"
-        >
-
-        <TextView
-            android:id="@+id/week_food_1"
-            android:text="순두부 찌개 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:fontFamily="@font/notosans_regular"
-            android:textColor="@color/main_color"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-<!--        <TextView-->
-<!--            android:id="@+id/week_food_2"-->
-<!--            android:text="쌀밥 "-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/notosans_regular"-->
-<!--            android:textSize="16sp"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintLeft_toRightOf="@id/week_food_1"-->
-<!--            />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/week_food_3"-->
-<!--            android:text="생선까스&amp;타르소스"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/notosans_regular"-->
-<!--            android:textSize="16sp"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintLeft_toRightOf="@id/week_food_2" />-->
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/week_afternoon_food_cl_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/week_afternoon_food_cl_1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="-20dp"
-        >
-
-        <TextView
-            android:id="@+id/week_food_4"
-            android:text="마늘쫑비엔나볶음 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/week_food_5"
-            android:text="꼬들단무지무침 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_food_4"
-            />
-
-        <TextView
-            android:id="@+id/week_food_6"
-            android:text="배추김치"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_food_5" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        />
 
     <ImageView
         android:id="@+id/dash_line"
@@ -145,7 +69,7 @@
         android:layerType="software"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
-        app:layout_constraintTop_toBottomOf="@+id/week_afternoon_food_cl_2"
+        app:layout_constraintTop_toBottomOf="@+id/week_food"
         android:layout_marginTop="6dp"
         />
 
@@ -176,94 +100,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/week_afternoon2_food_cl_1"
+    <TextView
+        android:id="@+id/week_afternoon2_food_1"
+        android:text="순두부 찌개 "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textSize="16sp"
+        android:textAlignment="center"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon2_cl"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="6dp"
-        >
-
-        <TextView
-            android:id="@+id/week_afternoon2_food_1"
-            android:text="순두부 찌개 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textColor="@color/main_color"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/week_afternoon2_food_2"
-            android:text="쌀밥 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_afternoon2_food_1"
-            />
-
-        <TextView
-            android:id="@+id/week_afternoon2_food_3"
-            android:text="생선까스&amp;타르소스"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_afternoon2_food_2" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/week_afternoon2_food_cl_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/week_afternoon2_food_cl_1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="-20dp"
-        >
-
-        <TextView
-            android:id="@+id/week_afternoon2_food_4"
-            android:text="마늘쫑비엔나볶음 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/week_afternoon2_food_5"
-            android:text="꼬들단무지무침 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_afternoon2_food_4"
-            />
-
-        <TextView
-            android:id="@+id/week_afternoon2_food_6"
-            android:text="배추김치"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_afternoon2_food_5" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        />
 
     <ImageView
         android:id="@+id/dash_line2"
@@ -271,7 +120,7 @@
         android:layerType="software"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
-        app:layout_constraintTop_toBottomOf="@+id/week_afternoon2_food_cl_2"
+        app:layout_constraintTop_toBottomOf="@+id/week_afternoon2_food_1"
         android:layout_marginTop="6dp"
         />
 
@@ -303,93 +152,18 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/week_evening_food_cl_1"
+    <TextView
+        android:id="@+id/week_evening_food_1"
+        android:text="순두부 찌개 "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textAlignment="center"
+        android:paddingHorizontal="10dp"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_evening_cl"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="6dp"
-        >
-
-        <TextView
-            android:id="@+id/week_evening_food_1"
-            android:text="순두부 찌개 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textColor="@color/main_color"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/week_evening_food_2"
-            android:text="쌀밥 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_evening_food_1"
-            />
-
-        <TextView
-            android:id="@+id/week_evening_food_3"
-            android:text="생선까스&amp;타르소스"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_evening_food_2" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/week_evening_food_cl_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/week_evening_food_cl_1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="-20dp"
-        >
-
-        <TextView
-            android:id="@+id/week_evening_food_4"
-            android:text="마늘쫑비엔나볶음 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/week_evening_food_5"
-            android:text="꼬들단무지무침 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_evening_food_4"
-            />
-
-        <TextView
-            android:id="@+id/week_evening_food_6"
-            android:text="배추김치"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/week_evening_food_5" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
