--- a/app/src/main/res/layout/fragment_week_foods.xml
+++ b/app/src/main/res/layout/fragment_week_foods.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    ViewPager 로 변경하면서 이 뷰는 현재 안쓰임-->
     <View
         android:id="@+id/week_food_top_v"
         android:layout_width="match_parent"
@@ -47,24 +46,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_search_result"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scrollbars="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/week_food_top_tv"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="13dp"/>
+
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/indicator"
+        app:ci_drawable="@drawable/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:ci_height="7dp"
+        app:ci_width="7dp"
+        app:layout_constraintTop_toBottomOf="@id/view_pager2"
         />
 
-<!--    <View-->
-<!--        android:id="@+id/week_food_bottom_v"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="96dp"-->
-<!--        android:background="@drawable/home_background_bottom"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
