--- a/app/src/main/res/layout/item_home_food.xml
+++ b/app/src/main/res/layout/item_home_food.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="12dp"
         android:layout_marginLeft="30dp"
         />
 
@@ -62,6 +62,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon_cl"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="7dp"
         />
 
     <ImageView
@@ -114,6 +115,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon2_cl"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="7dp"
         />
 
     <ImageView
@@ -167,7 +169,9 @@
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_evening_cl"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="12dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
