--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="main_color">#274984</color>
+    <color name="main_color">#1E50A7</color>
     <color name="home_text_color">#112F64</color>
     <color name="home_gray_color">#A6A6A6</color>
     <color name="home_not_food">#E31F1F</color>
